--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "svelte-footer",
+  "version": "0.0.0",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -17,5 +17,16 @@
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
-  }
+  },
+   "description": "footer de cliente catalogo UD",
+   "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JocoolQ/SvelteFooter.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JocoolQ/SvelteFooter/issues"
+  },
+  "homepage": "https://github.com/JocoolQ/SvelteFooter#readme"
 }
